Success message color modified

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
 
       <div class="recipe">
-        <div class="message">
+        <div class="info">
           <div>
             <svg>
               <use href="src/img/icons.svg#icon-smile"></use>
